--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -1,17 +1,22 @@
 # Learn more → https://github.com/TryGhost/action-deploy-theme#getting-started
 name: Deploy Theme
 on:
-  push:
-    branches:
-      - master
-      - main
+    push:
+        branches:
+            - master
+            - main
 jobs:
-  deploy:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy Ghost Theme
-        uses: TryGhost/action-deploy-theme@v1
-        with:
-          api-url: ${{ secrets.GHOST_ADMIN_API_URL }}
-          api-key: ${{ secrets.GHOST_ADMIN_API_KEY }}
+    deploy:
+        runs-on: ubuntu-22.04
+        steps:
+            - uses: actions/checkout@v3
+            - name: Bypass Cloudflare for GitHub Action
+              uses: xiaotianxt/bypass-cloudflare-for-github-action@v1.1.1
+              with:
+                  cf_zone_id: ${{ secrets.CF_ZONE_ID }}
+                  cf_api_token: ${{ secrets.CF_API_TOKEN }}
+            - name: Deploy Ghost Theme
+              uses: TryGhost/action-deploy-theme@v1
+              with:
+                  api-url: ${{ secrets.GHOST_ADMIN_API_URL }}
+                  api-key: ${{ secrets.GHOST_ADMIN_API_KEY }}
