--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -10,11 +10,11 @@ jobs:
         runs-on: ubuntu-22.04
         steps:
             - uses: actions/checkout@v3
-            - name: Bypass Cloudflare for GitHub Action
-              uses: xiaotianxt/bypass-cloudflare-for-github-action@v1.1.1
-              with:
-                  cf_zone_id: ${{ secrets.CF_ZONE_ID }}
-                  cf_api_token: ${{ secrets.CF_API_TOKEN }}
+            # - name: Bypass Cloudflare for GitHub Action
+            #   uses: xiaotianxt/bypass-cloudflare-for-github-action@v1.1.1
+            #   with:
+            #       cf_zone_id: ${{ secrets.CF_ZONE_ID }}
+            #       cf_api_token: ${{ secrets.CF_API_TOKEN }}
             - name: Deploy Ghost Theme
               uses: TryGhost/action-deploy-theme@v1
               with:
